[package]
name = "my-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
anyhow = "1.0.48"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
sha-1 = "0.9.8"
rand = "0.8.4"
num_enum = "0.5.4"
bytes = "1.1.0"
reqwest = "0.11.5"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-test = "0.4.2"
futures = "0.3.19"